// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImmunizationHistory matches snapshot with tabs (default config) 1`] = `
<DocumentFragment>
  <div
    class="widget"
    data-testid="immunization-history-widget-test-id"
    id="immunization-history-widget"
  >
    <div
      class="cds--tile header"
      data-testid="immunization-history-widget-tile-test-id"
      id="immunization-history-widget-tile"
    >
      <p
        data-testid="immunization-history-widget-title-test-id"
        id="immunization-history-widget-title"
      >
        IMMUNIZATION_HISTORY_WIDGET_TITLE
      </p>
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--auto-align cds--autoalign cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-_r_o_"
            class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--ghost cds--btn--icon-only"
            data-testid="immunization-history-widget-add-button-test-id"
            id="immunization-history-widget-add-button"
            type="button"
          >
            <span
              aria-label="immunization-history-widget-add-icon"
              class="_bahmniIcon_1cg5e_1 _paddingXxsmall_1cg5e_4"
              id="immunization-history-widget-add-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus fa-lg "
                data-icon="plus"
                data-prefix="fas"
                data-testid="immunization-history-widget-add-icon"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-_r_o_"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          >
            IMMUNIZATION_HISTORY_WIDGET_ADD_BUTTON
            <span
              class="cds--popover-caret cds--popover--auto-align"
            />
          </span>
        </span>
      </span>
    </div>
    <div
      class="cds--tabs"
    >
      <button
        aria-hidden="true"
        aria-label="Scroll left"
        class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--previous cds--tab--overflow-nav-button--hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
          />
        </svg>
      </button>
      <div
        aria-label="IMMUNIZATION_HISTORY_WIDGET_TAB_LIST_ARIA"
        class="cds--tab--list"
        role="tablist"
      >
        <button
          aria-controls="ccs-_r_r_-tabpanel-0"
          aria-selected="true"
          class="cds--tabs__nav-item cds--tabs__nav-link cds--tabs__nav-item--selected"
          id="ccs-_r_r_-tab-0"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="cds--tabs__nav-item-label-wrapper"
          >
            <span
              class="cds--tabs__nav-item-label"
              dir="auto"
            >
              IMMUNIZATION_HISTORY_WIDGET_TAB_ADMINISTERED
            </span>
          </div>
        </button>
        <div
          class="cds--tabs__nav-item--close--hidden"
        >
          <button
            aria-hidden="true"
            class="cds--visually-hidden cds--tabs__nav-item--close-icon--selected"
            tabindex="-1"
            title="Remove IMMUNIZATION_HISTORY_WIDGET_TAB_ADMINISTERED tab"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Press delete to remove IMMUNIZATION_HISTORY_WIDGET_TAB_ADMINISTERED tab"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
        <button
          aria-controls="ccs-_r_r_-tabpanel-1"
          aria-selected="false"
          class="cds--tabs__nav-item cds--tabs__nav-link"
          id="ccs-_r_r_-tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <div
            class="cds--tabs__nav-item-label-wrapper"
          >
            <span
              class="cds--tabs__nav-item-label"
              dir="auto"
            >
              IMMUNIZATION_HISTORY_WIDGET_TAB_NOT_ADMINISTERED
            </span>
          </div>
        </button>
        <div
          class="cds--tabs__nav-item--close--hidden"
        >
          <button
            aria-hidden="true"
            class="cds--visually-hidden"
            tabindex="-1"
            title="Remove IMMUNIZATION_HISTORY_WIDGET_TAB_NOT_ADMINISTERED tab"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Press delete to remove IMMUNIZATION_HISTORY_WIDGET_TAB_NOT_ADMINISTERED tab"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
      </div>
      <button
        aria-hidden="true"
        aria-label="Scroll right"
        class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--next cds--tab--overflow-nav-button--hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="ccs-_r_r_-tab-0"
      class="cds--tab-content cds--tab-content--interactive"
      id="ccs-_r_r_-tabpanel-0"
      role="tabpanel"
      tabindex="-1"
    >
      <div
        data-testid="immunization-administered-tab-test-id"
        id="immunization-administered-tab"
      >
        <p
          class="_expandableDataTableBodyEmpty_15ny8_30"
          data-testid="administered-immunizations-table-empty"
        >
          IMMUNIZATION_HISTORY_WIDGET_NO_IMMUNIZATIONS_RECORDED
        </p>
      </div>
    </div>
    <div
      aria-labelledby="ccs-_r_r_-tab-1"
      class="cds--tab-content cds--tab-content--interactive"
      hidden=""
      id="ccs-_r_r_-tabpanel-1"
      role="tabpanel"
      tabindex="-1"
    >
      <div
        data-testid="immunization-not-administered-tab-test-id"
        id="immunization-not-administered-tab"
      >
        <p
          class="_sortableDataTableBodyEmpty_my1j8_32"
          data-testid="not-administered-immunizations-table-empty"
        >
          IMMUNIZATION_HISTORY_WIDGET_NO_IMMUNIZATIONS_RECORDED
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImmunizationHistory matches snapshot without tabs (status filter applied) 1`] = `
<DocumentFragment>
  <div
    class="widget"
    data-testid="immunization-history-widget-test-id"
    id="immunization-history-widget"
  >
    <div
      class="cds--tile header"
      data-testid="immunization-history-widget-tile-test-id"
      id="immunization-history-widget-tile"
    >
      <p
        data-testid="immunization-history-widget-title-test-id"
        id="immunization-history-widget-title"
      >
        IMMUNIZATION_HISTORY_WIDGET_ADMINISTERED_TAB_TITLE
      </p>
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--auto-align cds--autoalign cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-_r_t_"
            class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--ghost cds--btn--icon-only"
            data-testid="immunization-history-widget-add-button-test-id"
            id="immunization-history-widget-add-button"
            type="button"
          >
            <span
              aria-label="immunization-history-widget-add-icon"
              class="_bahmniIcon_1cg5e_1 _paddingXxsmall_1cg5e_4"
              id="immunization-history-widget-add-icon"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-plus fa-lg "
                data-icon="plus"
                data-prefix="fas"
                data-testid="immunization-history-widget-add-icon"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-_r_t_"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          >
            IMMUNIZATION_HISTORY_WIDGET_ADD_BUTTON
            <span
              class="cds--popover-caret cds--popover--auto-align"
            />
          </span>
        </span>
      </span>
    </div>
    <div
      data-testid="immunization-administered-tab-test-id"
      id="immunization-administered-tab"
    >
      <p
        class="_expandableDataTableBodyEmpty_15ny8_30"
        data-testid="administered-immunizations-table-empty"
      >
        IMMUNIZATION_HISTORY_WIDGET_NO_IMMUNIZATIONS_RECORDED
      </p>
    </div>
  </div>
</DocumentFragment>
`;
